<resources>
    <string name="app_name">cookBook</string>
    <string name="add_recipe_name">Recipe name</string>
    <string name="add">Add</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="time">Time</string>
    <string name="minutes">Minutes</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="add_ingredient">New ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="ingredient_amount">Amount</string>
    <string name="ingredient_type">Unit</string>
    <string name="steps">Step</string>
    <string name="step_desc">Step description</string>
    <string name="add_steps">Add steps</string>
    <string name="add_step">Add step</string>
    <string name="add_new_recipe">Add recipe</string>
    <string name="view_recipes">Recipes list</string>
    <string name="polish_language">Polski</string>
    <string name="english_language">English</string>
    <string name="timer">Minutnik</string>
    <string name="timer_message">Ustaw czas(minuty)</string>
    <string name="set_timer">Ustaw</string>
    <string name="cancel">Anuluj</string>
    <string name="time_remaining">Pozostały czas:</string>
    <string name="countdown_finished">Odliczanie zakończone!</string>
    <string name="next_step_button">Next</string>
    <string name="previous_step_button">Back</string>
    <string name="timer_button">Set timer</string>
    <string name="empty_values">Fields cannot be empty</string>
    <string name="ingredient_add">Ingredient added!</string>
    <string name="step_add">Step added!</string>
    <string name="no_ingredients">At least 1 ingredient required</string>
    <string name="no_steps">At least 1 step required</string>
    <string name="finish">Finish</string>
</resources>
