<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.user.cookbook.fragments.StepDescriptionFragment"
    android:id="@+id/stepFragment"
    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/stepDescription"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:lines="11"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
        android:textColor="@android:color/background_dark"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/stepDescription"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/next_step_button"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="#66B9F9"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_alignStart="@+id/stepDescription"
        android:layout_alignTop="@+id/buttonNext"
        android:background="#66B9F9"
        android:text="@string/previous_step_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonTimer"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="#66B9F9"
        android:text="@string/timer_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
</RelativeLayout>
